cleanup, address layout bug

--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -1,6 +1,8 @@
 .layout {
   display: grid;
-  width: min(100% - 2rem, 60rem);
+  width: min(100% - 2rem, 40rem);
   margin-inline: auto;
   min-height: 100vh;
+  overflow-x: scroll;
+  // grid-template-columns: 100%;
 }
